--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Lefinance</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
+
+<head>
+  <title>Lefinance</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application" , "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application" , "data-turbo-track": "reload" , defer: true %>
-  </head>
-  <body>
-    <div class="notice">
+      <%= stylesheet_link_tag "application" , "data-turbo-track": "reload" %>
+        <%= javascript_include_tag "application" , "data-turbo-track": "reload" , defer: true %>
+</head>
+
+<body>
+  
+<%= render 'layouts/nav' %>
+<div class="container-fluid">
+ <div class="notice">
       <%= notice%>
     </div>
     <div class="alert">
       <%= alert%>
     </div>
-    <%= yield %>
-  </body>
+      <%= yield %>
+  </div>
+</body>
+
 </html>
